petit MAJ, mofication d'un lien dans le header + nommage correct de la page planning.php

--- a/statistique/header.html
+++ b/statistique/header.html
@@ -92,7 +92,7 @@
           </a>
         </li>
         <li>
-          <a href="planing.php">
+          <a href="planning.php">
             <i class="fa fa-calendar"></i> <span>Planing</span>
             <span class="pull-right-container">
             </span>
